Subproject is 'SDL', not 'sdl'

--- a/configure.ac
+++ b/configure.ac
@@ -93,7 +93,7 @@ TX_WITH_INCLUDED_SUBDIR(snacc, AS_HELP_STRING([--with-included-snacc],[use the b
 
 TX_BUILD_SUBPROJ(libpng)
 TX_BUILD_SUBPROJ(png2rgb)
-TX_BUILD_SUBPROJ(sdl)
+TX_BUILD_SUBPROJ(SDL)
 TX_BUILD_SUBPROJ(mpeg4ip)
 TX_BUILD_SUBPROJ(x264)
 TX_BUILD_SUBPROJ(libogg)
