Pass some environment variables into sub-makes (until OpenCaster's build logic can be rewritten to be sane)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,9 @@
 ## Transmission Suite
 
+AM_MAKEFLAGS = CC='$(CC)' CXX='$(CXX)' AS='$(AS)' LDFLAGS='$(LDFLAGS)'
+
 DIST_SUBDIRS = buildtools mhegc dss tsdemux libpng png2rgb mpeg4ip \
 	liboil schroedinger
 
 SUBDIRS = @subdirs@ @extra_subdirs@
+
