Compatibility and clean-ups.

--- a/opencaster/tools/ip2sec/Makefile
+++ b/opencaster/tools/ip2sec/Makefile
@@ -12,7 +12,7 @@ all: $(TARGET)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 $(TARGET): $(OBJS)
-	$(CC) -o $@ $(OBJS) $(LFLAGS)
+	$(CC) $(LDFLAGS) -o $@ $(OBJS) $(LFLAGS)
 
 install: all
 	install -m 755 $(TARGET) $(DESTDIR) 
