--- a/configure.ac
+++ b/configure.ac
@@ -118,7 +118,7 @@ TX_BUILD_SUBPROJ(schroedinger-tools)
 TX_BUILD_SUBPROJ(tstools)
 TX_BUILD_SUBPROJ(dss)
 TX_BUILD_SUBDIR(mhegc)
-TX_BUILD_SUBDIR(opencaster)
+TX_BUILD_SUBPROJ(opencaster)
 dnl TX_BUILD_SUBPROJ(ffmpeg,[configure --prefix=$prefix --enable-gpl --enable-version3 --enable-nonfree --disable-ffplay --disable-ffserver --enable-libschroedinger --enable-libtheora --enable-libvorbis --enable-libx264])
 
 export PKG_CONFIG_PATH
