--- a/.gitmodules
+++ b/.gitmodules
@@ -21,7 +21,7 @@
 	url = git://diracvideo.org/git/schroedinger.git
 [submodule "ffmpeg"]
 	path = ffmpeg
-	url = git://git.ffmpeg.org/ffmpeg/
+	url = git://git.github.com/nexgenta/ffmpeg.git
 [submodule "x264"]
 	path = x264
 	url = git://github.com/nexgenta/x264.git
