Add snacc and mhegenc submodules.

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,9 @@
 [submodule "opencaster"]
 	path = opencaster
 	url = git://github.com/nexgenta/opencaster.git
+[submodule "snacc"]
+	path = snacc
+	url = git://github.com/nexgenta/snacc.git
+[submodule "mhegenc"]
+	path = mhegenc
+	url = git://github.com/nexgenta/mhegenc.git
